[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/newHouse/theHouse.png" type="Texture" id=1]
[ext_resource path="res://Assets/background.png" type="Texture" id=2]
[ext_resource path="res://Assets/twilight.png" type="Texture" id=3]
[ext_resource path="res://Assets/Font/PlayfairDisplay-VariableFont_wght.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Scripts/MenuScreens/StartScreen.gd" type="Script" id=5]
[ext_resource path="res://Assets/Font/logo2.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=2]
size = 12
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 12
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 12
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=1]
size = 10
font_data = ExtResource( 4 )

[node name="MainMenu" type="Node2D"]
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 230.76, 87.9326 )
scale = Vector2( 1.32067, 1.32067 )
texture = ExtResource( 1 )

[node name="background" type="Sprite" parent="."]
position = Vector2( 175.028, 185.15 )
scale = Vector2( 0.765152, 0.208718 )
texture = ExtResource( 2 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 67.4985, 182.579 )
scale = Vector2( 0.427199, 0.224874 )
texture = ExtResource( 2 )

[node name="Sprite3" type="Sprite" parent="."]
position = Vector2( 372.517, 156.407 )
scale = Vector2( 0.21236, 0.16471 )
texture = ExtResource( 2 )

[node name="Sprite4" type="Sprite" parent="."]
position = Vector2( -2.77795, -23.0173 )
z_index = -1
texture = ExtResource( 3 )

[node name="play" type="Button" parent="."]
margin_left = 22.0
margin_top = 122.0
margin_right = 90.0
margin_bottom = 145.0
custom_fonts/font = SubResource( 2 )
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="howTo" type="Button" parent="."]
margin_left = 100.0
margin_top = 151.0
margin_right = 159.0
margin_bottom = 174.0
custom_fonts/font = SubResource( 3 )
text = "How To"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="levels" type="Button" parent="."]
margin_left = 23.0
margin_top = 151.0
margin_right = 90.0
margin_bottom = 171.0
custom_fonts/font = SubResource( 4 )
text = "Levels"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="about2" type="Label" parent="."]
margin_left = 168.632
margin_top = 163.0
margin_right = 316.632
margin_bottom = 180.0
custom_fonts/font = SubResource( 1 )
text = "Made  by Lyle Olsen - @keskidev"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite5" type="Sprite" parent="."]
position = Vector2( 105.892, 39.2882 )
scale = Vector2( 0.381182, 0.381182 )
texture = ExtResource( 6 )
[connection signal="pressed" from="play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="howTo" to="." method="_on_howTo_pressed"]
[connection signal="pressed" from="levels" to="." method="_on_levels_pressed"]
